# geofence-validator

./: .env.example  .gitignore  README.md  pyproject.toml
geofence_validator/: __init__.py  __main__.py  core.py  errors.py  logger.py  policy.py  resolver.py
scripts/: update_geolite_data.py
tests/: test_core.py  test_errors.py  test_logger.py  test_main.py  test_policy.py  test_resolver.py
